# IRL-engine-AX

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.postgres  LICENSE  README.md  SECURITY.md  docker-compose.standalone.yml  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
bench/: authorize.lua
docs/benchmarks/: README.md  results.md
docs/public/: 01-product-overview.md  02-whitepaper.md  03-case-study.md  04-getting-started.md  05-diagrams.md  06-developer-guide.md  07-operations-guide.md  08-compliance-guide.md  09-exchange-integration.md  10-mta-operator-spec.md  10-sla.md
migrations/: 001_irl_schema.sql  002_execution_model.sql  003_agent_registry.sql  004_verifier_states.sql  005_allowed_regimes_nullable.sql  006_shadow_mode.sql  007_portfolio_index.sql  008_token_management.sql  009_position_ledger.sql  010_constraints_and_indexes.sql  011_reasoning_traces_new_columns.sql  012_admin_audit_log_and_kms.sql  013_partitioning_dual_write.sql  014_system_config_and_token_roles.sql  015_partitioning_cutover.sql  016_multi_mta.sql  017_position_ledger_v2.sql  018_execution_v2_columns.sql  019_demo_seed.sql  020_merkle_anchors.sql  021_heartbeat_sequences.sql  022_ots_receipt_upgrade.sql
sdks/go/: irl_client.go
sdks/python/: irl_client.py
src/: asset.rs  audit.rs  auth.rs  backfill.rs  binding.rs  config.rs  db.rs  encryption.rs  errors.rs  gdpr.rs  heartbeat.rs  kms.rs  lib.rs  main.rs  merkle.rs  metrics.rs  mta.rs  openapi.rs  policy.rs  rate_limit.rs  registry.rs  seal.rs  shadow_mode.rs  snapshot.rs  time.rs  token_manager.rs  verifier.rs
src/middleware/: mod.rs  (+1 more)
static/: landing.html
tests/: integration.rs  mtls_integration.rs
(+17 files in other folders)
